--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
+
+
+/* TEXTFORM BUTTONS */
+.btn-custom {
+  border: 1px solid transparent;
+  margin: 0 0.5rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+/* Light mode button styles */
+.btn-custom-light {
   color: white;
+  /* background-color: white; */
 }
 
-.App-link {
-  color: #61dafb;
+/* Dark mode button styles */
+.btn-custom-dark {
+  color: #ffff;
+  /* background-color: #1b1f22; */
+  /* border-color: #1b1f22; */
+}
+  
+
+/* ALERTS */
+.alert-transition {
+  transition: opacity 0.5s ease-in-out;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
